Realized that the new padding-left in the Header was rendering properly, so I fixed this with spacing.

--- a/v1_portfolio/src/components/Header/style.css
+++ b/v1_portfolio/src/components/Header/style.css
@@ -4,7 +4,6 @@
     width: 100%;
     align-items: center;
     padding-top: .5rem;
-    padding-left: 22rem;
 }
 
 .header::after {
