--- a/v1_portfolio/src/components/Skill-Set/style.css
+++ b/v1_portfolio/src/components/Skill-Set/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    margin: 1rem 0;
+    margin: 2rem 0;
 }
 
 .skill {
